--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-sm navbar-light">
       <div class="container">
-        <a href="#" class="navbar-brand">
+        <a href="index.html" class="navbar-brand">
           <img
             src="visuals/headpicBV.jpg"
             class="navbar-profile"
@@ -51,7 +51,7 @@
         </div>
       </div>
     </nav>
-    <p>Hello, this is me</p>
+    <p>Learn about me</p>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
