--- a/education.html
+++ b/education.html
@@ -51,7 +51,44 @@
         </div>
       </div>
     </nav>
-    <p>Hello, this is me</p>
+
+    <div class="container">
+      <div class="cards">
+        <div class="row">
+          <div class="col-4">
+            <div class="university">
+                   <div class="name-school">
+                Lund University
+              </div>
+              <div class="degree">
+                Master's degree in Service Management
+              </div>
+              <div class="years">2018 - 2020</div>
+            </br>
+              <div class="name-school">Dalarna University</div>
+              <div class="degree">
+                Bachelor degree in business administration and management,
+                General
+              </div>
+              <div class="years">2014 - 2018</div>
+              </br>
+              <div class="name-school">
+                South East European University (seeu)
+              </div>
+              <div class="degree">
+                One year of study in North Macedonia as an exchange student
+              </div>
+              <div class="years">2016 - 2017</div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="courses">
+              <p>SheCodes</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
