Added flex and updated info at Education tab

--- a/education.html
+++ b/education.html
@@ -54,38 +54,62 @@
 
     <div class="container">
       <div class="cards">
-        <div class="row">
-          <div class="col-4">
-            <div class="university">
-                   <div class="name-school">
-                Lund University
-              </div>
-              <div class="degree">
-                Master's degree in Service Management
-              </div>
-              <div class="years">2018 - 2020</div>
-            </br>
-              <div class="name-school">Dalarna University</div>
-              <div class="degree">
-                Bachelor degree in business administration and management,
-                General
-              </div>
-              <div class="years">2014 - 2018</div>
-              </br>
-              <div class="name-school">
-                South East European University (seeu)
-              </div>
-              <div class="degree">
-                One year of study in North Macedonia as an exchange student
-              </div>
-              <div class="years">2016 - 2017</div>
-            </div>
+        <div class="university">
+          <h4>University</h4>
+          <div class="name-school">Lund University</div>
+          <div class="degree">Master's degree in Service Management</div>
+          <div class="years">2018 - 2020</div>
+          <br />
+          <div class="name-school">Dalarna University</div>
+          <div class="degree">
+            Bachelor degree in business administration and management, General
           </div>
-          <div class="col-4">
-            <div class="courses">
-              <p>SheCodes</p>
-            </div>
+          <div class="years">2014 - 2018</div>
+          <br />
+          <div class="name-school">South East European University (seeu)</div>
+          <div class="degree">
+            One year of study in North Macedonia as an exchange student
           </div>
+          <div class="years">2016 - 2017</div>
+        </div>
+
+        <div class="courses">
+          <h4>Courses</h4>
+          <h5>SheCodes</h5>
+          <div class="course-name">Web Development</div>
+          <div class="content">
+            Eight weeks of more advanced learning in the SheCodes Plus workshop.
+            Including HTML, CSS, Javascript ES6, API, GitHub, Bootstrap, Hosting
+          </div>
+          <a
+            href="https://www.shecodes.io/workshops/shecodes-plus-88478b5c-091a-4e82-bc78-6fefc8f2dc8c/projects/1353960"
+            target="_blank"
+            class="shecodes-links"
+            >Final project</a
+          >
+          <a
+            href="https://www.shecodes.io/certificates/59278ba08739d86318649be646e8ec6c"
+            target="_blank"
+            class="shecodes-links"
+            >Certificate</a
+          >
+          <div class="course-name">Introduction to coding</div>
+          <div class="content">
+            Three weeks of introduction to coding learning basic HTML, CSS,
+            Javascript ES6, and Visual Studio Code
+          </div>
+          <a
+            href="https://www.shecodes.io/workshops/shecodes-basics-1d90c468-6732-4c94-8980-0c2cf8de08d3/projects/1253460"
+            target="_blank"
+            class="shecodes-links"
+            >Final project</a
+          >
+          <a
+            href="https://www.shecodes.io/certificates/94ab0f540ffede8deaafb3555503c447"
+            target="_blank"
+            class="shecodes-links"
+            >Certificate</a
+          >
         </div>
       </div>
     </div>
