--- a/aboutme.html
+++ b/aboutme.html
@@ -51,7 +51,11 @@
         </div>
       </div>
     </nav>
-    <p>Learn about me</p>
+    <p>
+      From Sweden, based in Prague.
+      <br />
+      What I like to do, hobbies.
+    </p>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
