--- a/index.html
+++ b/index.html
@@ -13,45 +13,162 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm navbar-light">
-      <div class="container">
-        <a href="#" class="navbar-brand">
-          <img
-            src="visuals/headpicBV.jpg"
-            class="navbar-profile"
-            alt=""
-            width="50px"
-            height="55px"
-          />
-          Viktoria Teichler</a
-        >
-        <button
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          class="navbar-toggler"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a href="aboutme.html" class="nav-link">About me</a>
+    <h1>Viktoria Teichler</h1>
+    <h4>Projects</h4>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-2">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"
+                >Contact</a
+              >
             </li>
-            <li class="nav-item active">
-              <a href="projects.html" class="nav-link">Projects</a>
+            <li><div class="vr" style="height: 150px"></div></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Education</a>
             </li>
-            <li class="nav-item active">
-              <a href="education.html" class="nav-link">Education</a>
+            <li><div class="vr" style="height: 150px"></div></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
             </li>
           </ul>
         </div>
+        <div class="col-sm-10">
+          <div class="row">
+            <div class="col-12"><br /></div>
+          </div>
+          <div class="row">
+            <div class="col-5 border">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row no-gutters">
+                  <div class="col-md-6">
+                    <img
+                      src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
+                      class="card-img"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        <a href="https://celebrated-gnome-116124.netlify.app/"
+                          >Resume</a
+                        >
+                      </h5>
+
+                      <p class="card-text">
+                        <small class="text-muted"
+                          >A resume as a PDF is boring. So I made mine as a
+                          landing page instead.</small
+                        >
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-7 border">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row no-gutters">
+                  <div class="col-md-6">
+                    <img
+                      src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
+                      class="card-img"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        <a href="https://zesty-rugelach-208791.netlify.app/"
+                          >Weather App</a
+                        >
+                      </h5>
+
+                      <p class="card-text">
+                        <small class="text-muted"
+                          >My irst real coding project was to build a weather
+                          app. Using my newly coding skills using HTML, CSS and
+                          Javascript.</small
+                        >
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12"><br /></div>
+          </div>
+          <div class="row">
+            <div class="col-7 border">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row no-gutters">
+                  <div class="col-md-6">
+                    <img
+                      src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
+                      class="card-img"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        <a href="https://celebrated-gnome-116124.netlify.app/"
+                          >Zen</a
+                        >
+                      </h5>
+
+                      <p class="card-text">
+                        <small class="text-muted"
+                          >Last updated 3 mins ago</small
+                        >
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-5 border">
+              <div class="card mb-3" style="max-width: 540px">
+                <div class="row no-gutters">
+                  <div class="col-md-6">
+                    <img
+                      src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
+                      class="card-img"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        <a href="">Responsive</a>
+                      </h5>
+
+                      <p class="card-text">
+                        <small class="text-muted"
+                          >Last updated 3 mins ago</small
+                        >
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12"><br /></div>
+          </div>
+          <div class="row">
+            <div class="col-7 border">Hello</div>
+            <div class="col-5 border">hello</div>
+          </div>
+        </div>
       </div>
-    </nav>
-    <p>Hello, this is me</p>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
