--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo&amp;family=Montserrat&amp;family=Quicksand&amp;display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo&family=Montserrat&family=Quicksand&family=Solitreo&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,46 +25,55 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
+    <hr />
     <h1>Viktoria Teichler</h1>
+    <hr />
     <h4>Projects</h4>
     <div class="container">
       <div class="row">
-        <div class="col-sm-2">
+        <div class="col-md-2">
           <ul class="nav flex-column">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#"
                 >Contact</a
               >
             </li>
-            <li><div class="vr" style="height: 150px"></div></li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Education</a>
-            </li>
-            <li><div class="vr" style="height: 150px"></div></li>
+            <li><div class="vr"></div></li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
             </li>
+            <li><div class="vr"></div></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Education</a>
+            </li>
           </ul>
         </div>
-        <div class="col-sm-10">
+
+        <div class="col-md-10">
           <div class="row">
-            <div class="col-12"><br /></div>
+            <div class="col-md-12"><br /></div>
           </div>
           <div class="row">
-            <div class="col-5 border">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-md-5 border">
+              <div class="card mb-3">
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img
-                      src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
-                      class="card-img"
-                      alt="..."
-                    />
+                    <a
+                      href="https://celebrated-gnome-116124.netlify.app/"
+                      target="_blank"
+                    >
+                      <img
+                        src="visuals/resume.JPG"
+                        class="card-img mt-4 img-fluid"
+                        alt="..."
+                    /></a>
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">
-                        <a href="https://celebrated-gnome-116124.netlify.app/"
+                        <a
+                          href="https://celebrated-gnome-116124.netlify.app/"
+                          target="_blank"
                           >Resume</a
                         >
                       </h5>
@@ -69,27 +90,32 @@
               </div>
             </div>
 
-            <div class="col-7 border">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-md-7 border">
+              <div class="card mb-3">
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img
-                      src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
-                      class="card-img"
-                      alt="..."
-                    />
+                    <a
+                      href="https://zesty-rugelach-208791.netlify.app/"
+                      target="_blank"
+                      ><img
+                        src="visuals/weather.jpg"
+                        class="card-img img-fluid"
+                        alt="..."
+                    /></a>
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">
-                        <a href="https://zesty-rugelach-208791.netlify.app/"
+                        <a
+                          href="https://zesty-rugelach-208791.netlify.app/"
+                          target="_blank"
                           >Weather App</a
                         >
                       </h5>
 
                       <p class="card-text">
                         <small class="text-muted"
-                          >My irst real coding project was to build a weather
+                          >My first real coding project was to build a weather
                           app. Using my newly coding skills using HTML, CSS and
                           Javascript.</small
                         >
@@ -100,31 +126,36 @@
               </div>
             </div>
           </div>
+
           <div class="row">
-            <div class="col-12"><br /></div>
-          </div>
-          <div class="row">
-            <div class="col-7 border">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-md-7 border">
+              <div class="card mb-3">
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img
-                      src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
-                      class="card-img"
-                      alt="..."
-                    />
+                    <a
+                      href="https://celebrated-gnome-116124.netlify.app/"
+                      target="_blank"
+                    >
+                      <img
+                        src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
+                        class="card-img img-fluid"
+                        alt="..."
+                    /></a>
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">
-                        <a href="https://celebrated-gnome-116124.netlify.app/"
+                        <a
+                          href="https://celebrated-gnome-116124.netlify.app/"
+                          target="_blank"
                           >Zen</a
                         >
                       </h5>
 
                       <p class="card-text">
                         <small class="text-muted"
-                          >Last updated 3 mins ago</small
+                          >My first payed project. Created this landing page for
+                          the compant XXX.</small
                         >
                       </p>
                     </div>
@@ -132,20 +163,21 @@
                 </div>
               </div>
             </div>
-            <div class="col-5 border">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-md-5 border">
+              <div class="card mb-3">
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img
-                      src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
-                      class="card-img"
-                      alt="..."
-                    />
+                    <a href="" target="_blank">
+                      <img
+                        src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
+                        class="card-img img-fluid"
+                        alt="..."
+                    /></a>
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">
-                        <a href="">Responsive</a>
+                        <a href="" target="_blank">Responsive</a>
                       </h5>
 
                       <p class="card-text">
@@ -159,12 +191,10 @@
               </div>
             </div>
           </div>
+
           <div class="row">
-            <div class="col-12"><br /></div>
-          </div>
-          <div class="row">
-            <div class="col-7 border">Hello</div>
-            <div class="col-5 border">hello</div>
+            <div class="col-md-7 border mb-5">Hello</div>
+            <div class="col-md-5 border mb-5">hello</div>
           </div>
         </div>
       </div>
