--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo&amp;family=Montserrat&amp;family=Quicksand&amp;display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo&family=Montserrat&family=Quicksand&family=Solitreo&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,49 +25,22 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm navbar-light">
-      <div class="container">
-        <a href="index.html" class="navbar-brand">
-          <img
-            src="visuals/headpicBV.jpg"
-            class="navbar-profile"
-            alt=""
-            width="50px"
-            height="55px"
-          />
-          Viktoria Teichler</a
-        >
-        <button
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          class="navbar-toggler"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a href="aboutme.html" class="nav-link">About me</a>
-            </li>
-            <li class="nav-item active">
-              <a href="projects.html" class="nav-link">Projects</a>
-            </li>
-            <li class="nav-item active">
-              <a href="education.html" class="nav-link">Education</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <p>
-      From Sweden, based in Prague.
-      <br />
-      What I like to do, hobbies.
-    </p>
+    <hr />
+    <h1>Viktoria Teichler</h1>
+    <hr />
+    <img
+      src="visuals/cut-pic.png"
+      alt=""
+      class="cut-pic"
+      style="width: 170px"
+    />
+
+    <div class="menu">
+      <a class="nav-link" href="#">Contact</a>
+      <a class="nav-link" href="aboutme.html">About</a>
+      <a class="nav-link" href="#">Education</a>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
