--- a/index.html
+++ b/index.html
@@ -28,177 +28,162 @@
     <hr />
     <h1>Viktoria Teichler</h1>
     <hr />
-    <h4>Projects</h4>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2">
-          <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
-                >Contact</a
-              >
-            </li>
-            <li><div class="vr"></div></li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li><div class="vr"></div></li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Education</a>
-            </li>
-          </ul>
+
+    <div class="menu">
+      <a class="nav-link" href="#">Contact</a>
+      <a class="nav-link" href="aboutme.html">About</a>
+      <a class="nav-link" href="#">Education</a>
+    </div>
+
+    <div class="row">
+      <div class="col-ml">
+        <div class="row">
+          <div class="col-md-12"><br /></div>
+        </div>
+        <div class="row">
+          <div class="col-md-5 border">
+            <div class="card mb-3">
+              <div class="row no-gutters">
+                <div class="col-md-6">
+                  <a
+                    href="https://celebrated-gnome-116124.netlify.app/"
+                    target="_blank"
+                  >
+                    <img
+                      src="visuals/resume.JPG"
+                      class="card-img mt-4 img-fluid"
+                      alt="..."
+                  /></a>
+                </div>
+                <div class="col-md-6">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      <a
+                        href="https://celebrated-gnome-116124.netlify.app/"
+                        target="_blank"
+                        >Resume</a
+                      >
+                    </h5>
+
+                    <p class="card-text">
+                      <small class="text-muted"
+                        >A resume as a PDF is boring. So I made mine as a
+                        landing page instead.</small
+                      >
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-7 border">
+            <div class="card mb-3">
+              <div class="row no-gutters">
+                <div class="col-md-6">
+                  <a
+                    href="https://zesty-rugelach-208791.netlify.app/"
+                    target="_blank"
+                    ><img
+                      src="visuals/weather.jpg"
+                      class="card-img img-fluid"
+                      alt="..."
+                  /></a>
+                </div>
+                <div class="col-md-6">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      <a
+                        href="https://zesty-rugelach-208791.netlify.app/"
+                        target="_blank"
+                        >Weather App</a
+                      >
+                    </h5>
+
+                    <p class="card-text">
+                      <small class="text-muted"
+                        >My first real coding project was to build a weather
+                        app. Using my newly coding skills using HTML, CSS and
+                        Javascript.</small
+                      >
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div class="col-md-10">
-          <div class="row">
-            <div class="col-md-12"><br /></div>
-          </div>
-          <div class="row">
-            <div class="col-md-5 border">
-              <div class="card mb-3">
-                <div class="row no-gutters">
-                  <div class="col-md-6">
-                    <a
-                      href="https://celebrated-gnome-116124.netlify.app/"
-                      target="_blank"
-                    >
-                      <img
-                        src="visuals/resume.JPG"
-                        class="card-img mt-4 img-fluid"
-                        alt="..."
-                    /></a>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card-body">
-                      <h5 class="card-title">
-                        <a
-                          href="https://celebrated-gnome-116124.netlify.app/"
-                          target="_blank"
-                          >Resume</a
-                        >
-                      </h5>
-
-                      <p class="card-text">
-                        <small class="text-muted"
-                          >A resume as a PDF is boring. So I made mine as a
-                          landing page instead.</small
-                        >
-                      </p>
-                    </div>
-                  </div>
+        <div class="row">
+          <div class="col-md-7 border">
+            <div class="card mb-3">
+              <div class="row no-gutters">
+                <div class="col-md-6">
+                  <a
+                    href="https://celebrated-gnome-116124.netlify.app/"
+                    target="_blank"
+                  >
+                    <img
+                      src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
+                      class="card-img img-fluid"
+                      alt="..."
+                  /></a>
                 </div>
-              </div>
-            </div>
+                <div class="col-md-6">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      <a
+                        href="https://celebrated-gnome-116124.netlify.app/"
+                        target="_blank"
+                        >Zen</a
+                      >
+                    </h5>
 
-            <div class="col-md-7 border">
-              <div class="card mb-3">
-                <div class="row no-gutters">
-                  <div class="col-md-6">
-                    <a
-                      href="https://zesty-rugelach-208791.netlify.app/"
-                      target="_blank"
-                      ><img
-                        src="visuals/weather.jpg"
-                        class="card-img img-fluid"
-                        alt="..."
-                    /></a>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card-body">
-                      <h5 class="card-title">
-                        <a
-                          href="https://zesty-rugelach-208791.netlify.app/"
-                          target="_blank"
-                          >Weather App</a
-                        >
-                      </h5>
-
-                      <p class="card-text">
-                        <small class="text-muted"
-                          >My first real coding project was to build a weather
-                          app. Using my newly coding skills using HTML, CSS and
-                          Javascript.</small
-                        >
-                      </p>
-                    </div>
+                    <p class="card-text">
+                      <small class="text-muted"
+                        >My first payed project. Created this landing page for
+                        the compant XXX.</small
+                      >
+                    </p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-
-          <div class="row">
-            <div class="col-md-7 border">
-              <div class="card mb-3">
-                <div class="row no-gutters">
-                  <div class="col-md-6">
-                    <a
-                      href="https://celebrated-gnome-116124.netlify.app/"
-                      target="_blank"
-                    >
-                      <img
-                        src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
-                        class="card-img img-fluid"
-                        alt="..."
-                    /></a>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card-body">
-                      <h5 class="card-title">
-                        <a
-                          href="https://celebrated-gnome-116124.netlify.app/"
-                          target="_blank"
-                          >Zen</a
-                        >
-                      </h5>
-
-                      <p class="card-text">
-                        <small class="text-muted"
-                          >My first payed project. Created this landing page for
-                          the compant XXX.</small
-                        >
-                      </p>
-                    </div>
-                  </div>
+          <div class="col-md-5 border">
+            <div class="card mb-3">
+              <div class="row no-gutters">
+                <div class="col-md-6">
+                  <a href="" target="_blank">
+                    <img
+                      src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
+                      class="card-img img-fluid"
+                      alt="..."
+                  /></a>
                 </div>
-              </div>
-            </div>
-            <div class="col-md-5 border">
-              <div class="card mb-3">
-                <div class="row no-gutters">
-                  <div class="col-md-6">
-                    <a href="" target="_blank">
-                      <img
-                        src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
-                        class="card-img img-fluid"
-                        alt="..."
-                    /></a>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card-body">
-                      <h5 class="card-title">
-                        <a href="" target="_blank">Responsive</a>
-                      </h5>
+                <div class="col-md-6">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      <a href="" target="_blank">Responsive</a>
+                    </h5>
 
-                      <p class="card-text">
-                        <small class="text-muted"
-                          >Last updated 3 mins ago</small
-                        >
-                      </p>
-                    </div>
+                    <p class="card-text">
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="row">
-            <div class="col-md-7 border mb-5">Hello</div>
-            <div class="col-md-5 border mb-5">hello</div>
-          </div>
+        <div class="row">
+          <div class="col-md-7 border mb-5">Hello</div>
+          <div class="col-md-5 border mb-5">hello</div>
         </div>
       </div>
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
