Added About page

--- a/aboutme.html
+++ b/aboutme.html
@@ -29,15 +29,16 @@
     <h1>Viktoria Teichler</h1>
     <hr />
     <img
+      align="right"
       src="visuals/cut-pic.png"
       alt=""
-      class="cut-pic"
+      class="cut-pic img-fluid"
       style="width: 170px"
     />
 
     <div class="menu">
       <a class="nav-link" href="#">Contact</a>
-      <a class="nav-link" href="aboutme.html">About</a>
+      <a class="nav-link" href="index.html">Home</a>
       <a class="nav-link" href="#">Education</a>
     </div>
 
