--- a/aboutme.html
+++ b/aboutme.html
@@ -38,57 +38,66 @@
 
     <img
       align="right"
-      src="visuals/cut-pic.png"
+      src="visuals/cut-pic 1.png"
       alt=""
       class="cut-pic img-fluid"
       style="width: 170px"
     />
-    <div class="about-container mt-5">
-      <div class="row">
-        <div class="col-md-6">
-          Create new site from Git. Continuous Depleyment (meaning that every
-          time you push changes to GitHub it will also push it to the website.
-          Choose project on GitHub and Deploy (deploy means pushing your website
-          online). Domain management - to create a custom domain Add custom
-          domain For this you have to buy your domain. You can buy domains at
-          Google Domains Once you have yout domain, you can verify it on
-          Netlify. 🧵 Handcraft 💃🏻 Dance 🌍 Travel 🥾 Hiking 🎵 Eurovision Song
-          Contest 👩‍💻 Coding 🐈 Train my cat
-        </div>
-        <div class="col-md-6">
+
+    <div class="row">
+      <div class="col-md-6">
+        <img
+          src="visuals/handcraft-woman.JPG"
+          class="about-pic img-fluid m-3"
+          alt=""
+          width="150px"
+        />
+
+        <img
+          src="visuals/travel2.JPG"
+          class="about-pic img-fluid m-3"
+          alt=""
+          width="150px"
+        />
+
+        <div>
           <img
-            src="visuals/handcraft-woman.JPG"
-            class="img-fluid"
+            src="visuals/travel1.JPG"
+            class="about-pic img-fluid m-3"
             alt=""
-            width="120px"
+            width="150px"
           />
-          <div>
-            <img
-              src="visuals/travel1.JPG"
-              class="img-fluid"
-              alt=""
-              width="120px"
-            />
-          </div>
-          <div>
-            <img
-              src="visuals/handcraft-earrings.JPG"
-              class="img-fluid"
-              alt=""
-              width="120px"
-            />
-          </div>
-          <div>
-            <img
-              src="visuals/travel2.JPG"
-              class="img-fluid"
-              alt=""
-              width="120px"
-            />
-          </div>
+
+          <img
+            src="visuals/handcraft-earrings.JPG"
+            class="about-pic img-fluid m-3"
+            alt=""
+            width="150px"
+          />
         </div>
       </div>
+
+      <div class="col-md-6 mt-4">
+        Create new site from Git. Continuous Depleyment (meaning that every time
+        you push changes to GitHub it will also push it to the website. Choose
+        project on GitHub and Deploy (deploy means pushing your website online).
+        Domain management - to create a custom domain Add custom domain For this
+        you have to buy your domain. You can buy domains at Google Domains Once
+        you have yout domain, you can verify it on Netlify. 🧵 Handcraft 💃🏻
+        Dance 🌍 Travel 🥾 Hiking 🎵 Eurovision Song Contest 👩‍💻 Coding 🐈 Train
+        my cat
+      </div>
     </div>
+    <iframe
+      class="mt-4 mb-5"
+      width="460"
+      height="250"
+      src="https://www.youtube.com/embed/1ZYbU82GVz4"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen
+    ></iframe>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
