Changed some info texts

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                     <p class="card-text">
                       <small class="text-muted"
                         >A resume as a PDF is boring. So I made mine as a
-                        landing page instead.</small
+                        landing page instead. The source code is open and the
+                        design is made by me.</small
                       >
                     </p>
                   </div>
@@ -142,8 +143,8 @@
 
                     <p class="card-text">
                       <small class="text-muted"
-                        >My first payed project. Created this landing page for
-                        the compant XXX.</small
+                        >This is my first project for a client who wanted a
+                        landing page for their two businesses.</small
                       >
                     </p>
                   </div>
@@ -165,7 +166,11 @@
                     </h5>
 
                     <p class="card-text">
-                      <small class="text-muted">Last updated 3 mins ago</small>
+                      <small class="text-muted"
+                        >A project from my coding workshops where we were
+                        suppost to create a website after getting the design in
+                        Figma.</small
+                      >
                     </p>
                   </div>
                 </div>
