--- a/aboutme.html
+++ b/aboutme.html
@@ -78,18 +78,31 @@
       </div>
 
       <div class="col-md-6 mt-4">
-        Create new site from Git. Continuous Depleyment (meaning that every time
-        you push changes to GitHub it will also push it to the website. Choose
-        project on GitHub and Deploy (deploy means pushing your website online).
-        Domain management - to create a custom domain Add custom domain For this
-        you have to buy your domain. You can buy domains at Google Domains Once
-        you have yout domain, you can verify it on Netlify. 🧵 Handcraft 💃🏻
-        Dance 🌍 Travel 🥾 Hiking 🎵 Eurovision Song Contest 👩‍💻 Coding 🐈 Train
-        my cat
+        <div class="about-text">
+          I am a active person who love to hang out with friends on some event,
+          party or with a board game. Details are my thing and I have a tendency
+          to see, hear and just notice things that others do not. I like to have
+          fun and wanna live my life to the fullest. <br />
+          One of my hobbies are handcraft. I love to create with my hands and
+          can do everything that comes to my mind. I also love to dance and try
+          to take classes as much as possible. In the middle of May you might
+          find me in the hosting country for Eurovision Song Contest since I'm a
+          of the show. Even though I love Prague and the city life I do need
+          time in nature and would not say no to a day hike or a weekend in a
+          cottage. Meditation is also something that I want to keep doing
+          regularly in my life.
+          <br />
+          Learning Czech is something I'm working on even though it is a hard
+          language! And I reacently started to trian my cat.
+        </div>
       </div>
     </div>
+    <div class="video-text text-center mt-5">
+      This is currently my favorite music for meditation. <br />
+      I hope you will enjoy it as much as I do!
+    </div>
     <iframe
-      class="mt-4 mb-5"
+      class="mt-3 mb-5"
       width="460"
       height="250"
       src="https://www.youtube.com/embed/1ZYbU82GVz4"
