--- a/aboutme.html
+++ b/aboutme.html
@@ -43,7 +43,7 @@
       class="cut-pic img-fluid"
       style="width: 170px"
     />
-
+    <h4 class="text-center">About me</h4>
     <div class="row">
       <div class="col-md-6">
         <img
