Added a button to navbar and contact info

--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,25 @@
     <hr / class="mb-5">
 
     <div class="menu">
+      <a class="nav-link" href="contact.html">Contact</a>
       <a class="nav-link" href="aboutme.html">About</a>
-      <a class="nav-link" href="index.html">Home</a>
       <a class="nav-link" href="education.html">Education</a>
+      <a class="nav-link" href="index.html">Home</a>
+    </div>
+    <div class="contact-container text-center">
+      <h4>Let's get in touch!</h4>
+      <h6>Email</h6>
+      <div class="contact-info">
+        <a
+          href="mailto:viktoria.teichler@outlook.com"
+          class="text-decoration-none"
+          >viktoria.teichler@outlook.com</a
+        >
+        <h6>LinkedIn</h6>
+        <div class="contact-info">Icon Viktoria Teichler</div>
+      </div>
+      <h6>Phone</h6>
+      <div class="contact-info">+46 703 35 83 65</div>
     </div>
   </body>
 </html>
