--- a/education.html
+++ b/education.html
@@ -32,8 +32,9 @@
 
     <div class="menu">
       <a class="nav-link" href="contact.html">Contact</a>
-      <a class="nav-link" href="index.html">Home</a>
       <a class="nav-link" href="aboutme.html">About</a>
+      <a class="nav-link" href="education.html">Education</a>
+      <a class="nav-link" href="index.html">Home</a>
     </div>
     <h4 class="text-center">Education</h4>
     <div class="container">
@@ -62,7 +63,8 @@
 
         <div class="courses">
           <h4>Courses</h4>
-          <h5>SheCodes</h5>
+          <img src="visuals/shecodes.JPG" alt="" width="80px" />
+
           <div class="course-name">React</div>
           <div class="content">
             React Three week intensive course to learn React. This course is
