--- a/aboutme.html
+++ b/aboutme.html
@@ -32,8 +32,9 @@
 
     <div class="menu">
       <a class="nav-link" href="contact.html">Contact</a>
-      <a class="nav-link" href="index.html">Home</a>
+      <a class="nav-link" href="aboutme.html">About</a>
       <a class="nav-link" href="education.html">Education</a>
+      <a class="nav-link" href="index.html">Home</a>
     </div>
 
     <img
