--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <a class="nav-link" href="contact.html">Contact</a>
       <a class="nav-link" href="aboutme.html">About</a>
       <a class="nav-link" href="education.html">Education</a>
+      <a class="nav-link" href="index.html">Home</a>
     </div>
 
     <div class="row mt-5">
