Added background to header

--- a/aboutme.html
+++ b/aboutme.html
@@ -25,12 +25,13 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <hr />
-    <h1>Viktoria Teichler</h1>
-    <h3 class="text-center text-muted">Junior Front-end developer</h3>
-    <hr / class="mb-5">
-
-    <div class="menu">
+    <div class="head">
+      <hr / class="mt-3">
+      <h1>Viktoria Teichler</h1>
+      <h3 class="text-center text-muted">Junior Front-end developer</h3>
+      <hr />
+    </div>
+    <div class="menu mt-5">
       <a class="nav-link" href="contact.html">Contact</a>
       <a class="nav-link" href="aboutme.html">About</a>
       <a class="nav-link" href="education.html">Education</a>
