Change structure of cards

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="cards">
       <div class="card md" style="width: 18rem">
         <img
-          class="card-img-top"
+          class="card-img-top img-fluid"
           src="visuals/sweden-project.JPG"
           alt="Card image cap"
         />
@@ -56,7 +56,7 @@
 
       <div class="card md" style="width: 18rem">
         <img
-          class="card-img-top"
+          class="card-img-top img-fluid"
           src="visuals/weather.jpg"
           alt="Card image cap"
         />
@@ -69,11 +69,26 @@
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
+      <div class="card" style="width: 18rem">
+        <img
+          class="card-img-top img-fluid"
+          src="visuals/zen-project.JPG"
+          alt="Card image cap"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Zen Fabrika</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
     </div>
     <div class="cards">
       <div class="card" style="width: 18rem">
         <img
-          class="card-img-top"
+          class="card-img-top img-fluid"
           src="visuals/resume.JPG"
           alt="Card image cap"
         />
@@ -89,12 +104,12 @@
 
       <div class="card" style="width: 18rem">
         <img
-          class="card-img-top"
+          class="card-img-top img-fluid"
           src="visuals/zen-project.JPG"
           alt="Card image cap"
         />
         <div class="card-body">
-          <h5 class="card-title">Weather App</h5>
+          <h5 class="card-title">Zen Fabrika</h5>
           <p class="card-text">
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
