Changed text and cards

--- a/contact.html
+++ b/contact.html
@@ -47,10 +47,21 @@
           >viktoria.teichler@outlook.com</a
         >
         <h6>LinkedIn</h6>
-        <div class="contact-info">Icon Viktoria Teichler</div>
+        <div class="contact-info">
+          <a
+            href="https://www.linkedin.com/in/viktoria-teichler-345715139/"
+            target="_blank"
+            class="text-decoration-none"
+            ><i class="fa-brands fa-linkedin"></i> Viktoria Teichler</a
+          >
+        </div>
       </div>
       <h6>Phone</h6>
       <div class="contact-info">+46 703 35 83 65</div>
     </div>
+    <script
+      src="https://kit.fontawesome.com/369d6c2dcb.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
