--- a/education.html
+++ b/education.html
@@ -63,27 +63,40 @@
         </div>
 
         <div class="courses">
-          <h4>Courses</h4>
-          <img src="visuals/shecodes.JPG" alt="" width="80px" />
-
+          <h4>Coding 👩‍💻</h4>
           <div class="course-name">React</div>
           <div class="content">
-            React Three week intensive course to learn React. This course is
-            expected to be completed 27/2-2023.
+            Six weeks intensive course on how to work with react. This course is
+            still running and I expect to be done 8/3-2023.
           </div>
-
+          <div class="years">06.02.2023 - on going</div>
           <div class="course-name">Responsive</div>
           <div class="content">
-            Three week intensive course on how to make applications responsive.
-            This course is still running and I expect to be done 6/2-2023.
+            In this workshop I learned how to make a webpage responsive using
+            HTML and CSS.
           </div>
+          <div class="years">02.01.2022 - 06.02.2023</div>
+          <a
+            href="https://playful-monstera-ced22b.netlify.app/"
+            target="_blank"
+            class="shecodes-links"
+            >Final project</a
+          >
+          <a
+            href="https://www.shecodes.io/certificates/2b9f16d35a6a7f3e04f230db4b685d36"
+            target="_blank"
+            class="shecodes-links"
+            >Certificate</a
+          >
           <div class="course-name">Web Development</div>
           <div class="content">
-            Eight weeks of more advanced learning in the SheCodes Plus workshop.
-            Including HTML, CSS, Javascript ES6, API, GitHub, Bootstrap, Hosting
+            Eight intensive weeks of more advanced learning in the SheCodes Plus
+            workshop. Including: <br />
+            > HTML, CSS, Javascript ES6, API, GitHub, Bootstrap, Hosting <
           </div>
+          <div class="years">07.11.2022 - 02.01.2023</div>
           <a
-            href="https://www.shecodes.io/workshops/shecodes-plus-88478b5c-091a-4e82-bc78-6fefc8f2dc8c/projects/1353960"
+            href="https://zesty-rugelach-208791.netlify.app/"
             target="_blank"
             class="shecodes-links"
             >Final project</a
@@ -96,15 +109,17 @@
           >
           <div class="course-name">Introduction to coding</div>
           <div class="content">
-            Three weeks of introduction to coding learning basic HTML, CSS,
-            Javascript ES6, and Visual Studio Code
+            Three weeks of introduction to coding. Including <br />
+            > basic HTML, CSS, Javascript ES6, and Visual Studio Code <
           </div>
+          <div class="years">17.10.2022 - 07.11.2022</div>
           <a
             href="https://www.shecodes.io/workshops/shecodes-basics-1d90c468-6732-4c94-8980-0c2cf8de08d3/projects/1253460"
             target="_blank"
             class="shecodes-links"
             >Final project</a
           >
+
           <a
             href="https://www.shecodes.io/certificates/94ab0f540ffede8deaafb3555503c447"
             target="_blank"
