--- a/index.html
+++ b/index.html
@@ -39,66 +39,79 @@
     </div>
     <div class="cards">
       <div class="card md" style="width: 18rem">
-        <img
-          class="card-img-top img-fluid"
-          src="visuals/sweden-project.JPG"
-          alt="Card image cap"
-        />
+        <a
+          href="https://playful-monstera-ced22b.netlify.app/"
+          target="
+        "
+        >
+          <img
+            class="card-img-top img-fluid"
+            src="visuals/sweden-project.JPG"
+            alt="Card image cap"
+        /></a>
         <div class="card-body">
-          <h5 class="card-title">Sweden project</h5>
+          <h5 class="card-title">
+            <a
+              href="https://playful-monstera-ced22b.netlify.app/"
+              target="_blank"
+              >Responsive Project</a
+            >
+          </h5>
+
           <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
+            A project after the course Responsive to make a website just that,
+            responsive. Using HTML, CSS, Bootstrap, Grids and Flexbox.
           </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
 
       <div class="card md" style="width: 18rem">
-        <img
-          class="card-img-top img-fluid"
-          src="visuals/weather.jpg"
-          alt="Card image cap"
-        />
+        <a href="https://zesty-rugelach-208791.netlify.app/" target="_blank">
+          <img
+            class="card-img-top img-fluid"
+            src="visuals/weather.jpg"
+            alt="Card image cap"
+          />
+        </a>
         <div class="card-body">
-          <h5 class="card-title">Weather App</h5>
+          <h5 class="card-title">
+            <a
+              href="https://zesty-rugelach-208791.netlify.app/"
+              target="
+            _blank"
+            >
+              Weather App</a
+            >
+          </h5>
           <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
+            This is a final project in the course Web Development. Using HTML,
+            CSS and JavaScript. This project is not responsive.
           </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img
-          class="card-img-top img-fluid"
-          src="visuals/zen-project.JPG"
-          alt="Card image cap"
-        />
-        <div class="card-body">
-          <h5 class="card-title">Zen Fabrika</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
     </div>
     <div class="cards">
       <div class="card" style="width: 18rem">
-        <img
-          class="card-img-top img-fluid"
-          src="visuals/resume.JPG"
-          alt="Card image cap"
-        />
+        <a href="https://celebrated-gnome-116124.netlify.app/" target="_blank">
+          <img
+            class="card-img-top img-fluid"
+            src="visuals/resume.JPG"
+            alt="Card image cap"
+          />
+        </a>
         <div class="card-body">
-          <h5 class="card-title">Resume</h5>
+          <h5 class="card-title">
+            <a
+              href="https://celebrated-gnome-116124.netlify.app/"
+              target="_blank"
+            >
+              Resume
+            </a>
+          </h5>
           <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
+            I decided to do my resume available online for any potention
+            employer.
           </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
 
@@ -111,16 +124,24 @@
         <div class="card-body">
           <h5 class="card-title">Zen Fabrika</h5>
           <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
+            My first project from a customer. Building a landing page for a
+            company that offers different services.
           </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
     </div>
+    <footer>
+      <i class="fa-brands fa-facebook m-2"></i>
+      <i class="fa-brands fa-square-instagram m-2"></i>
+      <i class="fa-brands fa-linkedin m-2"></i>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/369d6c2dcb.js"
       crossorigin="anonymous"
     ></script>
   </body>
