--- a/index.html
+++ b/index.html
@@ -116,13 +116,16 @@
       </div>
 
       <div class="card" style="width: 18rem">
-        <img
-          class="card-img-top img-fluid"
-          src="visuals/zen-project.JPG"
-          alt="Card image cap"
-        />
+        <a href="#" target="_blank">
+          <img
+            class="card-img-top img-fluid"
+            src="visuals/zen-project.JPG"
+            alt="Card image cap"
+        /></a>
         <div class="card-body">
-          <h5 class="card-title">Zen Fabrika</h5>
+          <h5 class="card-title">
+            <a href="#" target="_blank"> Zen Fabrika </a>
+          </h5>
           <p class="card-text">
             My first project from a customer. Building a landing page for a
             company that offers different services.
