Added hover to nav links and footer

--- a/index.html
+++ b/index.html
@@ -134,9 +134,15 @@
       </div>
     </div>
     <footer>
-      <i class="fa-brands fa-facebook m-2"></i>
-      <i class="fa-brands fa-square-instagram m-2"></i>
-      <i class="fa-brands fa-linkedin m-2"></i>
+      <div>
+        Viktoria Teichler
+        <a
+          href="https://www.linkedin.com/in/viktoria-teichler-345715139/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-linkedin m-2"></i
+        ></a>
+      </div>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
