Changed text color

--- a/aboutme.html
+++ b/aboutme.html
@@ -45,7 +45,7 @@
       class="cut-pic img-fluid"
       style="width: 170px"
     />
-    <h4 class="text-center">About me</h4>
+
     <div class="row">
       <div class="col-md-6">
         <img
@@ -80,6 +80,7 @@
       </div>
 
       <div class="col-md-6 mt-4">
+        <h4 class="text-center mb-4">About me</h4>
         <div class="about-text">
           I am a active person who love to hang out with friends on some event,
           party or with a board game. Details are my thing and I have a tendency
