Updated text and size of pictures

--- a/aboutme.html
+++ b/aboutme.html
@@ -82,18 +82,22 @@
       <div class="col-md-6 mt-4">
         <h4 class="text-center mb-4">About me</h4>
         <div class="about-text">
-          I am a active person who love to hang out with friends on some event,
-          party or with a board game. Details are my thing and I have a tendency
-          to see, hear and just notice things that others do not. I like to have
-          fun and wanna live my life to the fullest. <br />
-          One of my hobbies are handcraft. I love to create with my hands and
-          can do everything that comes to my mind. I also love to dance and try
-          to take classes as much as possible. In the middle of May you might
-          find me in the hosting country for Eurovision Song Contest since I'm a
-          of the show. Even though I love Prague and the city life I do need
-          time in nature and would not say no to a day hike or a weekend in a
-          cottage. Meditation is also something that I want to keep doing
-          regularly in my life.
+          A Swede who ended up in Prague. I am an active person who loves to
+          hang out with friends at some events, parties, or with a board games.
+          I like to have fun and wanna live my life to the fullest.
+          <br />
+          One of my hobbies is handcraft, I just love to create with my hands.
+          In the middle of May, you might find me in the hosting country for
+          Eurovision Song Contest since I'm a fan of the show.
+          <br />
+          Even though I love Prague and the city life I do need time in nature
+          and would not say no to a day hike or a weekend in a cottage.
+          Meditation is also something that I want to keep doing regularly in my
+          life.
+          <br />
+          At the moment I'm working on learning Czech, but it is a hard
+          language! And I recently started to train my cat.
+
           <br />
           Learning Czech is something I'm working on even though it is a hard
           language! And I reacently started to trian my cat.
@@ -114,6 +118,17 @@
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       allowfullscreen
     ></iframe>
+    <footer>
+      <div>
+        Viktoria Teichler
+        <a
+          href="https://www.linkedin.com/in/viktoria-teichler-345715139/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-linkedin m-2"></i
+        ></a>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
