--- a/index.html
+++ b/index.html
@@ -119,16 +119,15 @@
         <a href="#" target="_blank">
           <img
             class="card-img-top img-fluid"
-            src="visuals/zen-project.JPG"
+            src="visuals/reactjs.png"
             alt="Card image cap"
         /></a>
         <div class="card-body">
           <h5 class="card-title">
-            <a href="#" target="_blank"> Zen Fabrika </a>
+            <a href="#" target="_blank"> React </a>
           </h5>
           <p class="card-text">
-            My first project from a customer. Building a landing page for a
-            company that offers different services.
+            Final project from my course learning React. Coming soon.
           </p>
         </div>
       </div>
