CSS and text update + buttons

--- a/aboutme.html
+++ b/aboutme.html
@@ -82,25 +82,25 @@
       <div class="col-md-6 mt-4">
         <h4 class="text-center mb-4">About me</h4>
         <div class="about-text">
-          A Swede who ended up in Prague. I am an active person who loves to
-          hang out with friends at some events, parties, or with a board games.
-          I like to have fun and wanna live my life to the fullest.
+          I am a Swede who ended up in Prague because of love. And I also fell
+          in love with the city. Hanging out with friends at some events, shows,
+          parties, or with board games is what I usually do on my spare time. I
+          like to have fun and wanna live my life to the fullest. But a night
+          home infront of the TV is necessary as well sometimes.
           <br />
           One of my hobbies is handcraft, I just love to create with my hands.
-          In the middle of May, you might find me in the hosting country for
-          Eurovision Song Contest since I'm a fan of the show.
+          Physical creation is also a passion and thats why I regularly take
+          dance classes. In the middle of May, you might find me in the hosting
+          country for Eurovision Song Contest since I'm a fan of the show.
           <br />
-          Even though I love Prague and the city life I do need time in nature
+          Even though I love the city life I do need time in nature to recover
           and would not say no to a day hike or a weekend in a cottage.
-          Meditation is also something that I want to keep doing regularly in my
-          life.
-          <br />
-          At the moment I'm working on learning Czech, but it is a hard
-          language! And I recently started to train my cat.
+          Meditation is also something that I want to learn to do regularly in
+          my life.
 
           <br />
-          Learning Czech is something I'm working on even though it is a hard
-          language! And I reacently started to trian my cat.
+          Learning Czech is also an on-going project and I reacently started to
+          trian my cat.
         </div>
       </div>
     </div>
