--- a/education.html
+++ b/education.html
@@ -71,6 +71,12 @@
             still running and I expect to be done 8/3-2023.
           </div>
           <div class="years">06.02.2023 - on going</div>
+          <a
+            href="https://lustrous-longma-2c6ff3.netlify.app/"
+            target="_blank"
+            class="project-link"
+            >Final project in progress</a
+          >
           <div class="course-name">Responsive</div>
           <div class="content">
             In this workshop I learned how to make a webpage responsive using
@@ -80,13 +86,13 @@
           <a
             href="https://playful-monstera-ced22b.netlify.app/"
             target="_blank"
-            class="shecodes-links"
+            class="project-link"
             >Final project</a
           >
           <a
             href="https://www.shecodes.io/certificates/2b9f16d35a6a7f3e04f230db4b685d36"
             target="_blank"
-            class="shecodes-links"
+            class="certificate-link"
             >Certificate</a
           >
           <div class="course-name">Web Development</div>
@@ -99,13 +105,13 @@
           <a
             href="https://zesty-rugelach-208791.netlify.app/"
             target="_blank"
-            class="shecodes-links"
+            class="project-link"
             >Final project</a
           >
           <a
             href="https://www.shecodes.io/certificates/59278ba08739d86318649be646e8ec6c"
             target="_blank"
-            class="shecodes-links"
+            class="certificate-link"
             >Certificate</a
           >
           <div class="course-name">Introduction to coding</div>
@@ -117,14 +123,14 @@
           <a
             href="https://www.shecodes.io/workshops/shecodes-basics-1d90c468-6732-4c94-8980-0c2cf8de08d3/projects/1253460"
             target="_blank"
-            class="shecodes-links"
+            class="project-link"
             >Final project</a
           >
 
           <a
             href="https://www.shecodes.io/certificates/94ab0f540ffede8deaafb3555503c447"
             target="_blank"
-            class="shecodes-links"
+            class="certificate-link"
             >Certificate</a
           >
         </div>
