--- a/index.html
+++ b/index.html
@@ -138,9 +138,65 @@
             A project after the course Responsive to make a website just that,
             responsive. Using HTML, CSS, Bootstrap, Grids and Flexbox.
           </p>
+          <div></div>
         </div>
       </div>
     </div>
+
+    <div class="cards">
+      <div class="card" style="width: 18rem">
+        <a
+          href="https://www.shecodes.io/workshops/shecodes-basics-1d90c468-6732-4c94-8980-0c2cf8de08d3/projects/1253460"
+          target="_blank"
+        >
+          <img
+            class="card-img-top img-fluid"
+            src="visuals/esc.jpg"
+            alt="Card image cap"
+          />
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-basics-1d90c468-6732-4c94-8980-0c2cf8de08d3/projects/1253460"
+              target="_blank"
+            >
+              First coding project
+            </a>
+          </h5>
+          <p class="card-text">
+            This is my first even coding project. Using some basic HTML, CSS and
+            JavaScript.
+          </p>
+        </div>
+      </div>
+
+      <div class="card md" style="width: 18rem">
+        <iframe
+          class="figma-project"
+          style="border: 1px solid rgba(0, 0, 0, 0.1)"
+          width="260"
+          height="180"
+          src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FW4btWdFqSUh6RcYQOSMy6Y%2FZen-Design%3Fnode-id%3D0%253A1%26t%3Drle1oAZGdj3mUxiU-1"
+          allowfullscreen
+        ></iframe>
+        <div class="card-body">
+          <h5 class="card-title">
+            <a
+              href="https://www.figma.com/file/W4btWdFqSUh6RcYQOSMy6Y/Zen-Design?node-id=0%3A1&t=rle1oAZGdj3mUxiU-1"
+              target="_blank"
+              >Figma project
+            </a>
+          </h5>
+
+          <p class="card-text">
+            These are designs for a client that needed a landing page for their
+            two different businesses.
+          </p>
+        </div>
+      </div>
+    </div>
+
     <footer>
       <div>Viktoria Teichler</div>
     </footer>
