Updated coding text

--- a/education.html
+++ b/education.html
@@ -78,8 +78,8 @@
               <h4>Coding 👩‍💻</h4>
               <div class="course-name">React</div>
               <div class="content">
-                Six weeks intensive course on how to work with react. This
-                course is still running and I expect to be done mid March.
+                Learning how to work with React. This course is still running
+                and I expect to be done mid March. Including React and Node.js.
               </div>
               <div class="years">06.02.2023 - on going</div>
               <div class="coding-links">
@@ -94,8 +94,9 @@
               </div>
               <div class="course-name">Responsive</div>
               <div class="content">
-                In this workshop I learned how to make a webpage responsive
-                using HTML and CSS.
+                In this course, I learned how to make a webpage responsive using
+                HTML, CSS, Bootstrap, and Flexbox. Figma was used to replicate
+                an already existing design.
               </div>
               <div class="years">02.01.2022 - 06.02.2023</div>
               <div class="coding-links">
@@ -116,9 +117,10 @@
               </div>
               <div class="course-name">Web Development</div>
               <div class="content">
-                Eight intensive weeks of more advanced learning in the SheCodes
-                Plus workshop. Including: <br />
-                > HTML, CSS, Javascript ES6, API, GitHub, Bootstrap, Hosting <
+                Eight weeks of more advanced learning in the SheCodes Plus
+                workshop. Here I also used wireframe creation and designed my
+                own app. Including HTML, CSS, Javascript ES6, API, GitHub,
+                Bootstrap and Hosting.
               </div>
               <div class="years">07.11.2022 - 02.01.2023</div>
               <div class="coding-links">
@@ -139,8 +141,8 @@
               </div>
               <div class="course-name">Introduction to coding</div>
               <div class="content">
-                Three weeks of introduction to coding. Including <br />
-                > basic HTML, CSS, Javascript ES6, and Visual Studio Code <
+                Three weeks of introduction, including basic HTML, CSS,
+                Javascript ES6, and Visual Studio Code.
               </div>
               <div class="years">17.10.2022 - 07.11.2022</div>
               <div class="coding-links">
